@@ -372,6 +372,12 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      fixed #1778 "main menu Rules should have the same items that
+      context RuleSetView menu when no rules are selected"
+    </p>
+  </li>
 </ul>
 
 
